--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2240,6 +2240,9 @@
 					color: #111111;
 					font-weight: 300;
 					z-index: 20;
+					background: rgba(0, 0, 0, 0.03);
+					box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.1), 1px 1px 0px 0px rgba(255, 255, 255, 0.3);
+					border-radius: 8px;
 				}
 /*
 					#slider .caption-line:before {
